WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/Invention_Contact__c.object-meta.xml
<CustomObject>
    <description>Connects Inventions to Contacts</description>
    <label>Invention Contact</label>
    <nameField>
        <label>Invention Researcher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invention Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>