WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Account the Researcher is associated with</inlineHelpText>
    <label>Contact Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventions by Researcher</relationshipLabel>
    <relationshipName>Contact_Inventions</relationshipName>
    <type>Lookup</type>
</CustomField>