WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Contact_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Link__c</fullName>
    <description>This returns a relative link to the related Contact Account in Lightning Experience. This is used to create a link to the object in a data table in a Lightning Component.</description>
    <formula>IF(NOT(ISBLANK(Contact_Account__c)),"/lightning/r/Account/"&amp;Contact_Account__r.Id&amp;"/view","")</formula>
    <inlineHelpText>This returns a relative link to the related Contact Account in Lightning Experience.</inlineHelpText>
    <label>Contact Account Link</label>
    <type>Text</type>
</CustomField>