WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Contact_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Name__c</fullName>
    <description>Name of the Contact Account on the Invention Contact record. This is used so Lightning Components can access related object data.</description>
    <formula>Contact_Account__r.Name</formula>
    <inlineHelpText>Name of the Contact Account on the Invention Contact record.</inlineHelpText>
    <label>Contact Account Name</label>
    <type>Text</type>
</CustomField>