WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Division related to the Researcher. Should be limited to only those associated with the Researcher.
If you do not see the appropriate Division, please check to make sure the Researcher has the Division associated.</inlineHelpText>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Inventions</relationshipLabel>
    <relationshipName>Inventions</relationshipName>
    <type>Lookup</type>
</CustomField>