WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Division_Link__c.field-meta.xml
<CustomField>
    <fullName>Division_Link__c</fullName>
    <description>This returns a relative link to the related Division in Lightning Experience. This is used to create a link to the object in a data table in a Lightning Component.</description>
    <formula>IF(NOT(ISBLANK(Division__c)),"/lightning/r/Division__c/"&amp;Division__r.Id&amp;"/view","")</formula>
    <inlineHelpText>This returns a relative link to the related Division in Lightning Experience.</inlineHelpText>
    <label>Division Link</label>
    <type>Text</type>
</CustomField>