WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <description>Name of the Division on the Invention Contact Record. This is used so Lightning Components can access related object data.</description>
    <formula>Division__r.Name</formula>
    <inlineHelpText>Name of the Division on the Invention Contact Record.</inlineHelpText>
    <label>Division Name</label>
    <type>Text</type>
</CustomField>