WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Invention__c.field-meta.xml
<CustomField>
    <fullName>Invention__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invention</label>
    <referenceTo>Invention__c</referenceTo>
    <relationshipLabel>Researchers</relationshipLabel>
    <relationshipName>Invention_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>