WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Invention_Link__c.field-meta.xml
<CustomField>
    <fullName>Invention_Link__c</fullName>
    <description>This returns a relative link to the related Invention in Lightning Experience. This is used to create a link to the object in a data table in a Lightning Component.</description>
    <formula>IF(NOT(ISBLANK(Invention__c)),"/lightning/r/Invention__c/"&amp;Invention__r.Id&amp;"/view","")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This returns a relative link to the related Invention in Lightning Experience.</inlineHelpText>
    <label>Invention Link</label>
    <type>Text</type>
</CustomField>