WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Inventor_Share__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Share__c</fullName>
    <label>Inventor Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>