WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Lead_Inventor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Inventor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only one person may have this flag. If you chose this Contact as lead, all others will be marked as not the lead.</inlineHelpText>
    <label>Lead Inventor</label>
    <type>Checkbox</type>
</CustomField>