WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Lead_Inventor_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Inventor_Text__c</fullName>
    <formula>IF( Lead_Inventor__c, "Yes","No")</formula>
    <label>Lead Inventor Text</label>
    <type>Text</type>
</CustomField>