WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Researcher__c.field-meta.xml
<CustomField>
    <fullName>Researcher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Researcher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventions</relationshipLabel>
    <relationshipName>Invention_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>