WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Researcher_Link__c.field-meta.xml
<CustomField>
    <fullName>Researcher_Link__c</fullName>
    <description>This returns a relative link to the related Researcher (Contact) in Lightning Experience. This is used to create a link to the object in a data table in a Lightning Component.</description>
    <formula>IF(NOT(ISBLANK(Researcher__c)),"/lightning/r/Contact/"&amp;Researcher__r.Id&amp;"/view","")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This returns a relative link to the related Researcher in Lightning Experience.</inlineHelpText>
    <label>Researcher Link</label>
    <type>Text</type>
</CustomField>