WS_INTEGRATION/force-app/main/default/objects/Invention_Contact__c/fields/Researcher_Name__c.field-meta.xml
<CustomField>
    <fullName>Researcher_Name__c</fullName>
    <description>Name of the Researcher on the Invention Contact Record. This is used so Lightning Components can access related object data.</description>
    <formula>IF( 
ISBLANK(Researcher__r.Title) , 
"", 
Researcher__r.Title &amp; " " 
) 
&amp; 
IF( 
ISBLANK(Researcher__r.FirstName) , 
"", 
Researcher__r.FirstName &amp; " " 
) 
&amp; 
Researcher__r.LastName</formula>
    <inlineHelpText>Name of the Researcher on the Invention Contact Record.</inlineHelpText>
    <label>Researcher Name</label>
    <type>Text</type>
</CustomField>